made active grey click on mobile less dark, resized giant photo of me to be less giant

--- a/css/screen.css
+++ b/css/screen.css
@@ -218,4 +218,4 @@ footer {
         width: 100%;
         padding: 10px 0; }
         #mob-nav a li:active {
-          background: #e7eaeb; } }
+          background: white; } }
