--- a/css/screen.sass
+++ b/css/screen.sass
@@ -282,6 +282,9 @@ footer
 	nav
 		display: none //easier to remove this b/c of sticky
 
+	.sticky-padding
+		padding-top: 0
+
 	#mob-nav
 		display: block
 		padding-top: 30px
