--- a/src/css/screen.sass
+++ b/src/css/screen.sass
@@ -98,7 +98,7 @@ h6, .h6
 	color: $grey
 
 .typeHighlight
-	color: $mint
+	color: $blue
 
 .brandFont
 	font-family: $sans-serif !important
@@ -128,17 +128,6 @@ a
 hr 
 	border: 0
 	border-bottom: $dottedBorder
-
-// flexbox
-.grid
-	display: flex
-	flex-wrap: wrap
-	list-style: none
-	margin: 0
-	padding: 0
-
-.grid-cell
-	flex: 1
 
 header
 	margin: 30px auto
@@ -170,7 +159,7 @@ nav
 		margin: 0 auto
 		width: 500px
 		padding: 2px 0 0
-		height: 36px
+		height: 34px
 		border-bottom: $dottedBorder
 		font-size: $h7
 
@@ -254,17 +243,35 @@ nav
 		height: 100%
 
 .container
-	padding: 4.5em 3em 6em
+	padding: 4.5em 3em
 
 footer
 	background: $beige
 	font-size: $h7
 	margin: 80px auto 0
-	text-align: left
+	text-align: center
+
+	.footer-container
+		max-width: 500px
+		margin: 0 auto
 
 	p
 		font-size: $h6
-		max-width: 20em
+		text-align: left
+
+	#tlemail
+		background: $beige
+		border: 2px solid $grey
+		border-radius: 20px
+		font-family: $sans-serif
+		font-size: $h7
+		padding: 8px 14px 7px
+
+	#tlesubmit
+		background: none repeat scroll 0% 0% $beige
+		color: $blue
+		border: 2px solid $blue
+		cursor: pointer
 
 .heart
 	color: $coral
@@ -314,3 +321,6 @@ footer
 
 				&:active
 					background: $lightGrey
+
+	footer
+		margin-top: 40px
