--- a/css/screen.css
+++ b/css/screen.css
@@ -1,13 +1,13 @@
 @font-face {
-  font-family: "Pluto Sans Cond Light";
-  src: url("../fonts/pluto-sans.eot");
-  src: url("../fonts/pluto-sans.eot?#iefix") format("embedded-opentype"), url("../fonts/pluto-sans.woff") format("woff"), url("../fonts/pluto-sans.ttf") format("truetype"); }
+  font-family: 'Pluto Sans Cond Light';
+  src: url('../fonts/pluto-sans.eot');
+  src: url('../fonts/pluto-sans.eot?#iefix') format('embedded-opentype'), url('../fonts/pluto-sans.woff') format('woff'), url('../fonts/pluto-sans.ttf') format('truetype'); }
 
 body {
-  background: white;
+  background: #fff;
   margin: 0;
   padding: 0;
-  color: #555555;
+  color: #555;
   font-size: 16px;
   font-family: "Pluto Sans Cond Light", sans-serif;
   text-align: center;
@@ -49,7 +49,7 @@ h6, .h6 {
   color: #aeb8be; }
 
 .typeHighlight {
-  color: #21dcc7; }
+  color: #00bdff; }
 
 .brandFont {
   font-family: "Pluto Sans Cond Light", sans-serif !important; }
@@ -97,12 +97,12 @@ header {
 nav {
   width: 100%;
   text-align: left;
-  background: white; }
+  background: #ffffff; }
   nav ul {
     margin: 0 auto;
     width: 500px;
     padding: 2px 0 0;
-    height: 36px;
+    height: 33px;
     border-bottom: 1px dotted #d8dde0;
     font-size: 12px; }
     nav ul li {
@@ -115,7 +115,7 @@ nav {
         float: right;
         margin-right: 0; }
       nav ul li a {
-        color: #555555; }
+        color: #555; }
     nav ul .go-top {
       border-radius: 10px;
       text-decoration: none;
@@ -142,7 +142,8 @@ nav {
     max-width: 500px;
     margin: 0 auto; }
     #content .about img {
-      width: 100%; }
+      width: 100%;
+      height: auto; }
   #content p {
     margin-bottom: 20px; }
     #content p a {
@@ -169,15 +170,32 @@ nav {
     width: 100%;
     height: 100%; }
 
+.container {
+  padding: 4.5em 3em; }
+
 footer {
+  background: #f5f4f1;
   font-size: 12px;
-  color: #aeb8be;
-  padding: 30px 0 50px;
-  border-top: 1px dotted #d8dde0;
-  max-width: 500px;
-  margin: 0 auto; }
-  footer a {
-    color: #aeb8be; }
+  margin: 80px auto 0;
+  text-align: center; }
+  footer .footer-container {
+    max-width: 500px;
+    margin: 0 auto; }
+  footer p {
+    font-size: 14px;
+    text-align: left; }
+  footer #tlemail {
+    background: #f5f4f1;
+    border: 2px solid #aeb8be;
+    border-radius: 20px;
+    font-family: "Pluto Sans Cond Light", sans-serif;
+    font-size: 12px;
+    padding: 8px 14px 7px; }
+  footer #tlesubmit {
+    background: none repeat scroll 0% 0% #f5f4f1;
+    color: #00bdff;
+    border: 2px solid #00bdff;
+    cursor: pointer; }
 
 .heart {
   color: #f25f60; }
@@ -192,12 +210,12 @@ footer {
 
 ::selection {
   background: #21dcc7;
-  color: white;
+  color: #fff;
   text-shadow: 0 0 0; }
 
 ::-moz-selection {
   background: #21dcc7;
-  color: white;
+  color: #fff;
   text-shadow: 0 0 0; }
 
 #mob-nav {
@@ -221,4 +239,8 @@ footer {
         width: 100%;
         padding: 10px 0; }
         #mob-nav a li:active {
-          background: #e7eaeb; } }
+          background: #e7eaeb; }
+
+  footer {
+    margin-top: 40px; }
+ }
