--- a/css/screen.sass
+++ b/css/screen.sass
@@ -98,7 +98,7 @@ h6, .h6
 	color: $grey
 
 .typeHighlight
-	color: $mint
+	color: $blue
 
 .brandFont
 	font-family: $sans-serif !important
@@ -159,7 +159,7 @@ nav
 		margin: 0 auto
 		width: 500px
 		padding: 2px 0 0
-		height: 36px
+		height: 33px
 		border-bottom: $dottedBorder
 		font-size: $h7
 
@@ -208,6 +208,7 @@ nav
 
 		img
 			width: 100%
+			height: auto
 
 	p
 		margin-bottom: 20px
@@ -241,18 +242,38 @@ nav
 		width: 100%
 		height: 100%
 
+.container
+	padding: 4.5em 3em
+
 footer
+	background: $beige
 	font-size: $h7
-	color: $grey
-	padding: 30px 0 50px
-	border-top: $dottedBorder
-	max-width: 500px
-	margin: 0 auto
+	margin: 80px auto 0
+	text-align: center
 
-	a
-		color: $grey
+	.footer-container
+		max-width: 500px
+		margin: 0 auto
 
-.heart 
+	p
+		font-size: $h6
+		text-align: left
+
+	#tlemail
+		background: $beige
+		border: 2px solid $grey
+		border-radius: 20px
+		font-family: $sans-serif
+		font-size: $h7
+		padding: 8px 14px 7px
+
+	#tlesubmit
+		background: none repeat scroll 0% 0% $beige
+		color: $blue
+		border: 2px solid $blue
+		cursor: pointer
+
+.heart
 	color: $coral
 
 	a
@@ -300,3 +321,6 @@ footer
 
 				&:active
 					background: $lightGrey
+
+	footer
+		margin-top: 40px
