--- a/src/css/screen.sass
+++ b/src/css/screen.sass
@@ -9,8 +9,8 @@
 $h0: 60px
 $h1: 48px
 $h2: 32px
-$h3: 20px
-$h4: 18px
+$h3: 24px
+$h4: 21px
 $h5: 16px
 $h6: 14px
 $h7: 12px
@@ -18,10 +18,10 @@ $h7: 12px
 $p: 16px
 
 $sans-serif: "Pluto Sans Cond Light", sans-serif
-$serif: "Lora", serif
+$serif: "rooney-web-1","rooney-web-2", "Lora", serif
 
 $blacker: #111
-$black: #555
+$black: #434343
 $blue: #00bdff
 $mint: #21dcc7
 $lightMint: #aeeed9
@@ -57,6 +57,7 @@ body
 	margin: 0
 	padding: 0
 	color: $black
+	font-weight: 300
 	font-size: $p
 	font-family: $sans-serif
 	text-align: center
@@ -76,6 +77,7 @@ h3, .h3
 	line-height: $h3*3
 
 h4, .h4
+	text-align: left
 	font-size: $h4
 	line-height: $h4*2
 
@@ -154,6 +156,7 @@ nav
 	width: 100%
 	text-align: left
 	background: #ffffff
+	font-size: $h7
 
 	ul
 		margin: 0 auto
@@ -161,7 +164,6 @@ nav
 		padding: 2px 0 0
 		height: 33px
 		border-bottom: $dottedBorder
-		font-size: $h7
 
 		li
 			list-style-type: none
@@ -213,21 +215,13 @@ nav
 	p
 		margin-bottom: 20px
 
-		a
-			font-style: italic
-
 	ul
 		text-align: left
-		font-size: $h6
 		font-family: $serif
 		margin-bottom: 20px
 
 		li
-			list-style-type: disc
-			margin-left: 15px
-
-			a
-				font-style: italic
+			list-style-type: none
 
 	.video-wrapper
 		position: relative
@@ -247,7 +241,6 @@ nav
 
 footer
 	background: $beige
-	font-size: $h7
 	margin: 80px auto 0
 	text-align: center
 
@@ -258,20 +251,7 @@ footer
 	p
 		font-size: $h6
 		text-align: left
-
-	#tlemail
-		background: $beige
-		border: 2px solid $grey
-		border-radius: 20px
 		font-family: $sans-serif
-		font-size: $h7
-		padding: 8px 14px 7px
-
-	#tlesubmit
-		background: none repeat scroll 0% 0% $beige
-		color: $blue
-		border: 2px solid $blue
-		cursor: pointer
 
 .heart
 	color: $coral
