--- a/src/css/screen.scss
+++ b/src/css/screen.scss
@@ -51,8 +51,8 @@ $dottedBorder: 1px dotted lighten($grey, 15%);
 //pluto sans pls
 @font-face {
 	font-family: 'Pluto Sans Cond Light';
-	src: url('../fonts/pluto-sans.eot');
-	src: url('../fonts/pluto-sans.eot?#iefix') format('embedded-opentype'), url('../fonts/pluto-sans.woff') format('woff'), url('../fonts/pluto-sans.ttf') format('truetype');
+	src: url('/fonts/pluto-sans.eot');
+	src: url('/fonts/pluto-sans.eot?#iefix') format('embedded-opentype'), url('/fonts/pluto-sans.woff') format('woff'), url('/fonts/pluto-sans.ttf') format('truetype');
 }
 //I use this mixin a lot
 @mixin transition($duration, $property: all, $delay:0) {
@@ -97,15 +97,15 @@ body {
 	display: block;
 
 	&.fp {
-		background: url('../images/sprite-fp.png');
+		background: url('/images/sprite-fp.png');
 	}
 
 	&.left {
-		background: url('../images/sprite-left.png');
+		background: url('/images/sprite-left.png');
 	}
 
 	&.right {
-		background: url('../images/sprite-right.png');
+		background: url('/images/sprite-right.png');
 	}
 
 }
@@ -120,7 +120,7 @@ body {
 	margin-top: -43px;
 
 	&.flying {
-		background: url('../images/ufo.png');
+		background: url('/images/ufo.png');
 	}
 
 }
@@ -151,7 +151,7 @@ header {
 }
 
 nav {
-		//background: url('../images/nav.png');
+		//background: url('/images/nav.png');
 		//height: 134px;
 		//width: 252px;
 		position: fixed;
@@ -175,12 +175,12 @@ nav {
 	}
 
 	#onett {
-		background: url('../images/onett.png') top center;
+		background: url('/images/onett.png') top center;
 		height: 1730px;
 		width: 100%;
 
 		#trees {
-			background: url('../images/z-trees.png') bottom center;
+			background: url('/images/z-trees.png') bottom center;
 			height: 1730px;
 			width: 100%;
 			position: absolute;
@@ -189,12 +189,12 @@ nav {
 	}
 
 	#saturn {
-		background: url('../images/saturn-valley.png') center center;
+		background: url('/images/saturn-valley.png') center center;
 		height: 2300px;
 		width: 100%;
 
 		#valley {
-			background: url('../images/z-saturn.png') center center;
+			background: url('/images/z-saturn.png') center center;
 			height: 950px;
 			width: 100%;
 			position: absolute;
@@ -206,15 +206,15 @@ nav {
 			position: absolute;
 
 			&.phased1 {
-				background: url('../images/ufo1.png') center center;
+				background: url('/images/ufo1.png') center center;
 			}
 
 			&.phased2 {
-				background: url('../images/ufo2.png') center center;
+				background: url('/images/ufo2.png') center center;
 			}			
 
 			&.phased3 {
-				background: url('../images/ufo3.png') center center;
+				background: url('/images/ufo3.png') center center;
 			}
 
 		}
@@ -222,18 +222,18 @@ nav {
 	}
 
 	#lostworld {
-		background: url('../images/lostworld.png') center center;
+		background: url('/images/lostworld.png') center center;
 		width: 100%;
 		height: 100px;
 	}
 
 	#pinkcloud {
-		background: url('../images/sky.png') center center;
+		background: url('/images/sky.png') center center;
 		width: 100%;
 		height: 1840px;
 
 		#clouds {
-			background: url('../images/z-clouds.png') center center;
+			background: url('/images/z-clouds.png') center center;
 			height: 1840px;
 			width: 100%;
 			position: absolute;
@@ -244,7 +244,7 @@ nav {
 	#moonside {
 		width: 100%;
 		height: 1434px;
-		background: url('../images/moonside.png') center center;
+		background: url('/images/moonside.png') center center;
 
 		#ending {
 			height: 580px;
@@ -252,7 +252,7 @@ nav {
 			position: absolute;
 
 			&.show {
-				background: url('../images/ending.png') center center;
+				background: url('/images/ending.png') center center;
 			}
 
 		}
@@ -382,8 +382,11 @@ nav {
 				}
 			}
 
+		.speakerdeck-wrapper {
+			padding-left: 0;
+		}
 
-	} //work
+	} //talks
 
 	.clear {
 		margin: 0;
