--- a/css/screen.css
+++ b/css/screen.css
@@ -172,6 +172,8 @@ nav {
     left: 0;
     width: 100%;
     height: 100%; }
+#talks .speakerdeck-wrapper {
+  padding-left: 0; }
 
 .clear {
   margin: 0;
