typekit uncommented, slides removed

--- a/css/screen.css
+++ b/css/screen.css
@@ -1,7 +1,8 @@
 @font-face {
   font-family: 'Pluto Sans Cond Light';
-  src: url("/fonts/pluto-sans.eot");
-  src: url("/fonts/pluto-sans.eot?#iefix") format("embedded-opentype"), url("/fonts/pluto-sans.woff") format("woff"), url("/fonts/pluto-sans.ttf") format("truetype"); }
+  src: url('/fonts/pluto-sans.eot');
+  src: url('/fonts/pluto-sans.eot?#iefix') format('embedded-opentype'), url('/fonts/pluto-sans.woff') format('woff'), url('/fonts/pluto-sans.ttf') format('truetype'); }
+
 body {
   margin: 0;
   font-family: "Rooney", serif;
@@ -23,11 +24,11 @@ body {
   margin-top: -29px;
   display: block; }
   #earthbounded.fp {
-    background: url("/images/sprite-fp.png"); }
+    background: url('/images/sprite-fp.png'); }
   #earthbounded.left {
-    background: url("/images/sprite-left.png"); }
+    background: url('/images/sprite-left.png'); }
   #earthbounded.right {
-    background: url("/images/sprite-right.png"); }
+    background: url('/images/sprite-right.png'); }
 
 #ufo {
   width: 88px;
@@ -38,7 +39,7 @@ body {
   margin-left: -44px;
   margin-top: -43px; }
   #ufo.flying {
-    background: url("/images/ufo.png"); }
+    background: url('/images/ufo.png'); }
 
 a {
   color: #36b5ab;
@@ -70,21 +71,21 @@ nav {
         list-style-type: none; }
 
 #onett {
-  background: url("/images/onett.png") top center;
+  background: url('/images/onett.png') top center;
   height: 1730px;
   width: 100%; }
   #onett #trees {
-    background: url("/images/z-trees.png") bottom center;
+    background: url('/images/z-trees.png') bottom center;
     height: 1730px;
     width: 100%;
     position: absolute; }
 
 #saturn {
-  background: url("/images/saturn-valley.png") center center;
+  background: url('/images/saturn-valley.png') center center;
   height: 2300px;
   width: 100%; }
   #saturn #valley {
-    background: url("/images/z-saturn.png") center center;
+    background: url('/images/z-saturn.png') center center;
     height: 950px;
     width: 100%;
     position: absolute; }
@@ -93,23 +94,23 @@ nav {
     width: 100%;
     position: absolute; }
     #saturn #distorter.phased1 {
-      background: url("/images/ufo1.png") center center; }
+      background: url('/images/ufo1.png') center center; }
     #saturn #distorter.phased2 {
-      background: url("/images/ufo2.png") center center; }
+      background: url('/images/ufo2.png') center center; }
     #saturn #distorter.phased3 {
-      background: url("/images/ufo3.png") center center; }
+      background: url('/images/ufo3.png') center center; }
 
 #lostworld {
-  background: url("/images/lostworld.png") center center;
+  background: url('/images/lostworld.png') center center;
   width: 100%;
   height: 100px; }
 
 #pinkcloud {
-  background: url("/images/sky.png") center center;
+  background: url('/images/sky.png') center center;
   width: 100%;
   height: 1840px; }
   #pinkcloud #clouds {
-    background: url("/images/z-clouds.png") center center;
+    background: url('/images/z-clouds.png') center center;
     height: 1840px;
     width: 100%;
     position: absolute; }
@@ -117,13 +118,13 @@ nav {
 #moonside {
   width: 100%;
   height: 1434px;
-  background: url("/images/moonside.png") center center; }
+  background: url('/images/moonside.png') center center; }
   #moonside #ending {
     height: 580px;
     width: 100%;
     position: absolute; }
     #moonside #ending.show {
-      background: url("/images/ending.png") center center; }
+      background: url('/images/ending.png') center center; }
 
 #work div {
   padding: 8% 20% 10%;
@@ -250,6 +251,5 @@ footer {
     padding: 3% 10% 6%; }
 
   footer ul li {
-    width: 100%; } }
-
-/*# sourceMappingURL=screen.css.map */
+    width: 100%; }
+ }
