--- a/css/screen.scss
+++ b/css/screen.scss
@@ -69,7 +69,7 @@ $dottedBorder: 1px dotted lighten($grey, 15%);
 }
 body {
 	margin: 0;
-	font-family: "Rooney", serif;
+	font-family: $rooney, serif;
 	font-size: $p;
 	font-weight: 300;
 	line-height: 1.8em;
