--- a/css/screen.css
+++ b/css/screen.css
@@ -5,7 +5,7 @@
 
 body {
   margin: 0;
-  font-family: "Rooney", serif;
+  font-family: "rooney-web-1", "rooney-web-2", serif;
   font-size: 16px;
   font-weight: 300;
   line-height: 1.8em;
