--- a/css/screen.scss
+++ b/css/screen.scss
@@ -11,8 +11,8 @@ $h7: 12px;
 $p: 16px;
 
 //type faces
-$plutosans: "Pluto Sans Cond Light", sans-serif;
-$rooney: "rooney-web-1","rooney-web-2", serif;
+$plutosans: "Pluto Sans Cond Light", Helvetica, sans-serif;
+$rooney: "rooney-web-1","rooney-web-2", "Lora", Georgia, serif
 
 //colors
 $blacker: #111;
