--- a/css/screen.css
+++ b/css/screen.css
@@ -5,7 +5,7 @@
 
 body {
   margin: 0;
-  font-family: "Rooney", serif;
+  font-family: "rooney-web-1", "rooney-web-2", "Lora", Georgia, serif;
   font-size: 16px;
   font-weight: 300;
   line-height: 1.8em;
@@ -64,7 +64,7 @@ nav {
   nav ul {
     text-align: center; }
     nav ul a {
-      font-family: "Pluto Sans Cond Light", sans-serif;
+      font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
       text-transform: uppercase;
       font-size: 12px; }
       nav ul a li {
@@ -139,7 +139,7 @@ nav {
     max-width: 100%; }
 #work h2 {
   font-size: 32px;
-  font-family: "Pluto Sans Cond Light", sans-serif;
+  font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
   font-weight: 300;
   line-height: 48px; }
 #work .intro {
@@ -159,7 +159,7 @@ nav {
     max-width: 100%; }
 #talks h2 {
   font-size: 32px;
-  font-family: "Pluto Sans Cond Light", sans-serif;
+  font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
   font-weight: 300;
   line-height: 48px; }
 #talks .video .video-wrapper {
@@ -184,7 +184,7 @@ nav {
 footer {
   background: #0c2b3c;
   color: #fff;
-  font-family: "Pluto Sans Cond Light", sans-serif;
+  font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
   padding: 2em 0 1.5em; }
   footer ul a {
     color: #36b5ab; }
@@ -196,7 +196,7 @@ footer {
     height: 50px; }
   footer .footnote {
     margin: 2em 0 0 40px;
-    font-family: "Pluto Sans Cond Light", sans-serif;
+    font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
     font-size: 12px;
     color: #afb9c0; }
 
